@startuml
'https://plantuml.com/class-diagram
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide empty members

' 为减少交叉，仅展示核心继承结构与关键成员

abstract class AbstractFlyingObject {
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft {
    # maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + getMaxHp():int
    + {abstract} shoot():List<BaseBullet>
}

class HeroAircraft {
    - power:int
    - fireMode:FireMode
    - bulletFactory:BulletFactory
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + setFireMode(FireMode mode):void
    + applyTimedFireMode(FireMode mode, long durationMs):void
    + forward():void
    + shoot():List<BaseBullet>
}

abstract class AbstractEnemy {
    # bombScore:int
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + onBombActivated():int
    + isActive():boolean
}

class EliteEnemy {
    {static} - SHOOT_INTERVAL:int
    - lastShootTime:long
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot(long now):List<BaseBullet>
    + dropProp():AbstractProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class SuperEliteEnemy {
    {static} - SHOOT_INTERVAL:int
    - lastShootTime:long
    + SuperEliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot(long now):List<BaseBullet>
    + onBombActivated():int
}

class BossEnemy {
    {static} - SHOOT_INTERVAL:int
    - lastShootTime:long
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot(long now):List<BaseBullet>
    + onBombActivated():int
}

abstract class BaseBullet {
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + onBombActivated():int
    + isActive():boolean
}

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + activate(Game game):int
}

' 将道具子类并列放置，减少交叉
together {
  class BloodSupply {
      + BloodSupply(int locationX, int locationY, int speedX, int speedY)
      + activate(Game game):int
  }

  class BombSupply {
      + BombSupply(int locationX, int locationY, int speedX, int speedY)
      + activate(Game game):int
  }

  class FireSupply {
      + FireSupply(int locationX, int locationY, int speedX, int speedY)
      + activate(Game game):int
  }

  class SuperFireSupply {
      + SuperFireSupply(int locationX, int locationY, int speedX, int speedY)
      + activate(Game game):int
  }
}

' 继承关系（按层次自上而下，减少交叉）
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- AbstractEnemy
AbstractAircraft <|-- HeroAircraft
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- SuperEliteEnemy
AbstractEnemy <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- BloodSupply
AbstractProp <|-- BombSupply
AbstractProp <|-- FireSupply
AbstractProp <|-- SuperFireSupply

@enduml
